--- a/views/Partials/main_nav.ejs
+++ b/views/Partials/main_nav.ejs
@@ -1,6 +1,6 @@
 	<!-- Main Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">COMP-229</a>
+  <a class="navbar-brand" href="/"><img src ="Assets/images/AP.png" class="logo"/>Abhi Patel</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,31 +13,31 @@
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
-			<a class="nav-link" href="/home"><i class="fas fa-lg fa-laptop-house"></i> Home</a>
+			<a class="nav-link" href="/home"> Home</a>
       </li>
 		<% if (title == "About") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
-        	<a class="nav-link" href="/about"><i class="fas fa-lg fa-info-circle"></i> About </a>
+        	<a class="nav-link" href="/about"> About </a>
       </li>
-		<% if (title == "Products") { %>
+		<% if (title == "Projects") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
-        	<a class="nav-link" href="/products"><i class="fab fa-lg fa-elementor"></i> Products</a>
+        	<a class="nav-link" href="/Projects"> Projects</a>
       </li>
 	  	<% if (title == "Services") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
-        	<a class="nav-link" href="/services"><i class="fas fa-lg fa-cogs"></i> Services</a>
+        	<a class="nav-link" href="/services"> Services</a>
       </li>
 	  		<li class="nav-item">
-        <a class="nav-link" href="/contact"><i class="fas fa-lg fa-mobile-alt"></i> Contacts</a>
+        <a class="nav-link" href="/contact"> Contacts</a>
       </li>
   </div>
 </nav>
