--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,36 @@
-<%- include Partials/header.ejs %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<%- include Partials/header.ejs %>
+</head>
+<body>
 
 <%- include Partials/main_nav.ejs %>	
+	
+	
 
-	<!-- Main Content-->
-	<main class="container">
-		<div class="jumbotron">
-			<h1 class="display-4">Welcome to the <%= title %> page</h1>
-		</div>
-	</main>
+	
+	
+	
+<% if (key == "home") { %>
+		<%- include Partials/home.ejs %>
+		<% } else if(key == "projects") { %>
+		<%- include Partials/projects.ejs %>	
+		<% } else if(key == "services"){ %>
+		<%- include Partials/services.ejs %>	
+		<% } else if(key == "about"){ %>
+		<%- include Partials/about.ejs %>	
+		<% } else { %>
+		<%- include Partials/contact.ejs %>	
+		<% } %>
 
-<%- include Partials/bottom_nav.ejs %>	
-
-<%- include Partials/footer.ejs %>	
 
 
 
 
+
+<%- include Partials/bottom_nav.ejs %>
+
+<%- include Partials/footer.ejs %>
+</body>
+</html>
