--- a/views/Partials/about.ejs
+++ b/views/Partials/about.ejs
@@ -1,15 +1,49 @@
 
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
-			<div class="header-wrapper"><img src="Assets/images/banner.jpg" /></div>
+			
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
 		</div>
 		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class="background"><p style="color:blue">About</p></div>
+		<div class="background">
+			<img src="Assets/images/Abhi.jpg" style="height:250px" alt="Abhi's photo"/>
+			<h2 style="text-align: center">Hi, I'm Abhi Patel</h2>
+			<div class="text">
+			<p>
+				I am from India and have a bachelor's degree in computer Engineering.<br/><br/>
+
+				After that, I worked as SQL developer for more than 1 year and as a software specialist in a medical IT company 
+				for 2 years where I managed databases of multiple hospitals and provided technical support.<br/><br/>
+				
+				Currently, I have taken admission in an Artificial Intelligence Fast-track program to enhance my other skills
+				 like programming skills, data visualization skills and data analysis skills by learning important and fundamental 
+				 aspects of Artificial Intelligence. <br/><br/>
+
+				In my spare time, I like to do outdoor activities like swimming, dance, horse-riding and travelling.<br/><br/>
+
+				Professionally, I would like to become a data analyst in a reputed organization and would feel grateful to have
+				 a chance to suggest important decisions to the organization through my data analysis and related skills.
+			</p>
+			
+			</div>
+			<div>
+			<button type="button" class="btn btn-warning"><a href="/assets/images/resume.pdf" view>View My Resume</button>
+			
+			
+			<p></p>
+			
+			</div>
+		
+		</div>
 </main>
 
 	<style>
+		.text{
+			text-align: left;
+			font-size: 13px;
+
+		}
 		.wrapper {
 			position: relative;
 		}
@@ -31,7 +65,7 @@
 		.header-text {
 			z-index: 2;
 			position: relative;
-			color: #fff;
+			color: #034077;
 			margin-left: 15px;
 		}
 		.logo{
