--- a/views/Partials/contact.ejs
+++ b/views/Partials/contact.ejs
@@ -1,13 +1,48 @@
 
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
-			<div class="header-wrapper"><img src="Assets/images/banner.jpg" /></div>
+			<div class="header-wrapper">
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
 		</div>
 		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class="background"><p style="color:blue">Contacts</p></div>
+		
+		<div class="container contact-form">
+            <div class="contact-image">
+                <img src="Assets/images/contact3.PNG" style="height:250px" alt="rocket_contact"/>
+            </div>
+            <form method="post">
+                <h3>Drop Your Message</h3>
+               <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" name="btnSubmit" value="Send Message" class="btn btn-primary" data-bs-toggle="button" autocomplete="off"/>
+							
+
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </form>
+</div>
+		
+		</div>
 </main>
+
+
 
 	<style>
 		.wrapper {
@@ -60,6 +95,7 @@
 		.header-text{
 			font-variant: small-caps;
 			font-family: Georgia, serif;
+			color: #034077;
 		}
 		.background{
 			background: #f5f5f5;
