--- a/views/Partials/home.ejs
+++ b/views/Partials/home.ejs
@@ -1,12 +1,29 @@
 
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
-			<div class="header-wrapper"><img src="Assets/images/banner.jpg" /></div>
+			
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
 		</div>
-		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class="background"><p style="color:blue">Home</p></div>
+		<div><h1 class="display-7">Hi, I'm Abhi</h1>
+		<h5 style="margin-left:30px">SQL developer</h5>
+		</div>
+
+		<div class="background">	
+			<div>
+				<h2><b>Mission :</b></h2>
+				
+				<p>I work hard every day to provide respected service for customers who are in need to keep their data organized , efficient and secured.</p>
+
+				<p>To know more about my experience, what I provide or how we can get in touch for optimistic services, connect with me today. </p>
+			</div>
+		
+			<div>
+			<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/about" view>Know more</button>
+			<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/services" view>Services</button>
+			<p></p>
+			</div>
+		</div>
 </main>
 
 	<style>
@@ -31,8 +48,9 @@
 		.header-text {
 			z-index: 2;
 			position: relative;
-			color: #fff;
+			color: #034077;;
 			margin-left: 15px;
+			
 		}
 		.logo{
 			
