--- a/views/Partials/bottom_nav.ejs
+++ b/views/Partials/bottom_nav.ejs
@@ -1,6 +1,6 @@
 	<!-- Bottom Nav-->
-	<footer>
-		<nav class="navbar fixed-bottom navbar-dark bg-dark">
+	<footer style="height:3px;">
+		<nav class="navbar fixed-bottom navbar-dark bg-dark"  style=" position: relative;">
 			<div class="container-fluid">
 				<h6 class="display-6 navbar-text">&copy; Copyright 2020. All rights reserved.</h6>
 			</div>
