--- a/views/Partials/services.ejs
+++ b/views/Partials/services.ejs
@@ -1,15 +1,38 @@
 
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
-			<div class="header-wrapper"><img src="Assets/images/banner.jpg" /></div>
+			
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
 		</div>
 		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class = "background"><p style="color:blue">Services</p></div>
+		<div class = "background">
+		
+			<div>
+				<img src="Assets/images/database.jpg" style="height:100px" alt="Database_img"/>
+				<h2   style = "margin-left: 50px">SQL development</h2>
+				<p>databse administration,effective data management and data security</p>
+			</div>
+
+			<div>
+				<img src="Assets/images/analysis.png" style="height:100px" alt="Database_img"/>
+				<h2   style = "margin-left: 50px">Data analysis</h2>
+				<p>Gather data, through analysis and persent with different visualization styles</p>
+			</div>
+			<div>
+			<button type="button" class="btn btn-warning"><a href="/assets/images/resume.pdf" view>Get in Touch</button>
+			<p></p>
+			
+			</div>
+		</div>
+
+		
+		
+		
 </main>
 
 	<style>
+		}
 		.wrapper {
 			position: relative;
 		}
@@ -33,6 +56,7 @@
 			position: relative;
 			color: #fff;
 			margin-left: 15px;
+			color: #034077;
 		}
 		.logo{
 			
@@ -60,6 +84,7 @@
 		.header-text{
 			font-variant: small-caps;
 			font-family: Georgia, serif;
+			color: #034077;
 		}
 		.background{
 			background: #f5f5f5;
