--- a/views/Partials/bottom_nav.ejs
+++ b/views/Partials/bottom_nav.ejs
@@ -1,8 +1,27 @@
 	<!-- Bottom Nav-->
-	<footer style="height:3px;">
+	<footer>
 		<nav class="navbar fixed-bottom navbar-dark bg-dark"  style=" position: relative;">
 			<div class="container-fluid">
+				
+				<div class="social-icons">
+					<ul style=" margin:0; padding:0;">
+						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+						<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+						<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+					</ul>
+				</div>
 				<h6 class="display-6 navbar-text">&copy; Copyright 2020. All rights reserved.</h6>
 			</div>
 		</nav>
 	</footer>
+
+	<style>
+		.social-icons ul {
+			display:flex;
+			justify-content:center;
+			list-style:none;
+		}
+		.social-icons ul li { margin-left: 20px;}
+		.social-icons ul li a { font-size: 22px; color: #fff;}
+	</style>
