--- a/views/Partials/contact.ejs
+++ b/views/Partials/contact.ejs
@@ -7,36 +7,66 @@
 		</div>
 		<div><h1 class="display-7"><%= name %></h1></div>
 		
-		<div class="container contact-form">
-            <div class="contact-image">
-                <img src="Assets/images/contact3.PNG" style="height:250px" alt="rocket_contact"/>
-            </div>
-            <form method="post">
-                <h3>Drop Your Message</h3>
-               <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" name="btnSubmit" value="Send Message" class="btn btn-primary" data-bs-toggle="button" autocomplete="off"/>
-							
+		<div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
-                        </div>
-                    </div>
+          <div class="col-lg-6">
+
+            <div class="row" style="margin:0;">
+              <div class="col-md-12">
+                <div class="info-box">
+                  <i class="bx bx-map"></i>
+                  <h3>Our Address</h3>
+                  <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
+              </div>
+              <div class="col-md-6">
+                <div class="info-box mt-4">
+                  <i class="fas fa-lg fa-envelope"></i>
+                  <h3>Email Us</h3>
+                  <p>info@example.com<br>contact@example.com</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="info-box mt-4">
+                  <i class="fas fa-lg fa-phone"></i>
+                  <h3>Call Us</h3>
+                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="col-lg-6">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row" style="margin:0;">
+                <div class="col form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                </div>
+                <div class="col form-group">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                </div>
+              </div>
+			   <div class="col">
+				<div class="form-group">
+					<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="">
+				</div>
+				</div>
+			  <div class="col">
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required=""></textarea>
+              </div>
+			  </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <input type="submit" class="btn btn-warning" value="Send Message">
             </form>
+          </div>
+
+        </div>
 </div>
 		
 		</div>
@@ -62,7 +92,7 @@
 			height: 100%;
 			width: 100%;
 		}
-
+	.info-box i { font-size: 30px; }
 		.header-text {
 			z-index: 2;
 			position: relative;
@@ -100,4 +130,32 @@
 		.background{
 			background: #f5f5f5;
 		}
+		.jumbotron {
+			position: relative;
+			background: linear-gradient(to right, #EFEFBB, #D4D3DD);
+		}
+		/****** Button CSS START *******/
+		.btn,
+		button,
+		input[type="submit"],
+		button[type="submit"]
+		 {
+			display:inline-block;
+			padding: 10px 30px;
+			color: #000;
+		}
+		.btn:hover,
+		button:hover,
+		input[type="submit"]:hover,
+		button[type="submit"]:hover {
+			background:#343a40;
+			color: #fff !important;
+			border-color: #343a40;
+		}
+		button a {color: #000; }
+		button a:hover { 
+			color: #fff; 
+			text-decoration: none;
+			}
+		/****** Button CSS END *******/
 	</style>
