--- a/views/Partials/home.ejs
+++ b/views/Partials/home.ejs
@@ -1,27 +1,22 @@
 
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
-			
 			<h1 class="display-7 header-text"><%= title %></h1>
-			
 		</div>
-		<div><h1 class="display-7">Hi, I'm Abhi</h1>
-		<h5 style="margin-left:30px">SQL developer</h5>
-		</div>
-
-		<div class="background">	
-			<div>
-				<h2><b>Mission :</b></h2>
-				
-				<p>I work hard every day to provide respected service for customers who are in need to keep their data organized , efficient and secured.</p>
-
-				<p>To know more about my experience, what I provide or how we can get in touch for optimistic services, connect with me today. </p>
-			</div>
-		
-			<div>
-			<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/about" view>Know more</button>
-			<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/services" view>Services</button>
-			<p></p>
+		<div class="hero-section">
+			<div class="row">
+				<div class="col-md-7">
+					<h1 class="display-7">Hi, I'm Abhi</h1>
+					<h5>SQL developer</h5>
+					<h2><b>Mission :</b></h2>
+					<p>I work hard every day to provide respected service for customers who are in need to keep their data organized , efficient and secured.</p>
+					<p>To know more about my experience, what I provide or how we can get in touch for optimistic services, connect with me today. </p>
+					<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/about">Know more</a></button>
+					<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/services">Services</a></button>
+				</div>
+				<div class="col-md-5">
+					<img style="width:100%;" src="Assets/images/hero-thumbnail.jpg">
+				</div>
 			</div>
 		</div>
 </main>
@@ -30,7 +25,34 @@
 		.wrapper {
 			position: relative;
 		}
-
+		.hero-section {
+			padding: 20px;
+			background: #eee;
+		}
+		/****** Button CSS START *******/
+		.btn,
+		button,
+		input[type="submit"],
+		button[type="submit"]
+		 {
+			display:inline-block;
+			padding: 10px 30px;
+			color: #000;
+		}
+		.btn:hover,
+		button:hover,
+		input[type="submit"]:hover,
+		button[type="submit"]:hover {
+			background:#343a40;
+			color: #fff;
+			border-color: #343a40;
+		}
+		button a {color: #000; }
+		button a:hover { 
+			color: #fff; 
+			text-decoration: none;
+			}
+		/****** Button CSS END *******/
 		.header-wrapper {
 			position: absolute;
 			top: 0;
@@ -44,7 +66,7 @@
 			height: 100%;
 			width: 100%;
 		}
-
+	.jumbotron { margin: 0;}
 		.header-text {
 			z-index: 2;
 			position: relative;
@@ -53,8 +75,6 @@
 			
 		}
 		.logo{
-			
-			
 			position: relative;
 			top: 0;
 			right:0;
@@ -83,5 +103,8 @@
 			background: #f5f5f5;
 			
 		}
-
+		.jumbotron {
+			position: relative;
+			background: linear-gradient(to right, #EFEFBB, #D4D3DD);
+		}
 	</style>
