--- a/views/Partials/services.ejs
+++ b/views/Partials/services.ejs
@@ -6,20 +6,25 @@
 			
 		</div>
 		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class = "background">
-		
-			<div>
+		<div class = "service-section">
+		<div class="row" style = "align-items:center; margin-bottom:30px;">
+			<div class="col-md-3" style = "text-align:center">
 				<img src="Assets/images/database.jpg" style="height:100px" alt="Database_img"/>
-				<h2   style = "margin-left: 50px">SQL development</h2>
+			</div>
+			<div class="col-md-9">
+				<h2   style = "text-align:left;">SQL development</h2>
 				<p>databse administration,effective data management and data security</p>
 			</div>
-
-			<div>
-				<img src="Assets/images/analysis.png" style="height:100px" alt="Database_img"/>
-				<h2   style = "margin-left: 50px">Data analysis</h2>
+		</div>
+		<div class="row"style = "align-items:center">	
+			<div class="col-md-9"style = "text-align:right;">
+				<h2 >Data analysis</h2>
 				<p>Gather data, through analysis and persent with different visualization styles</p>
 			</div>
-			<div>
+			<div class="col-md-3"style = "text-align:center">
+				<img src="Assets/images/analysis.png" style="height:100px" alt="Database_img"/>
+			</div>
+		</div>
 			<button type="button" class="btn btn-warning"><a href="/assets/images/resume.pdf" view>Get in Touch</button>
 			<p></p>
 			
@@ -86,7 +91,40 @@
 			font-family: Georgia, serif;
 			color: #034077;
 		}
-		.background{
+		.service-section{
+			padding:20px;
 			background: #f5f5f5;
+		}
+		.jumbotron {
+			position: relative;
+			background: linear-gradient(to right, #EFEFBB, #D4D3DD);
+		}
+		/****** Button CSS START *******/
+		.btn,
+		button,
+		input[type="submit"],
+		button[type="submit"]
+		 {
+			display:inline-block;
+			padding: 10px 30px;
+			color: #000;
+		}
+		.btn:hover,
+		button:hover,
+		input[type="submit"]:hover,
+		button[type="submit"]:hover {
+			background:#343a40;
+			color: #fff !important;
+			border-color: #343a40;
+		}
+		button a {color: #000; }
+		button a:hover { 
+			color: #fff; 
+			text-decoration: none;
+			}
+		/****** Button CSS END *******/
+		button.btn.btn-warning {
+			margin: 0 auto;
+			display: table;
 		}
 	</style>
