--- a/views/Partials/about.ejs
+++ b/views/Partials/about.ejs
@@ -29,7 +29,7 @@
 						Professionally, I would like to become a data analyst in a reputed organization and would feel grateful to have
 						a chance to suggest important decisions to the organization through my data analysis and related skills.
 					</p>
-					<button type="button" class="btn btn-warning"><a href="/assets/images/resume.pdf">View My Resume</a></button>
+					<button type="button" class="btn btn-warning"><a href="https://github.com/abhipatel2103/comp229_abhi/blob/master/resume.pdf" target="_blank">View My Resume</a></button>
 				</div>
 			</div>
 		</div>
