--- a/views/Partials/contact.ejs
+++ b/views/Partials/contact.ejs
@@ -15,22 +15,22 @@
               <div class="col-md-12">
                 <div class="info-box">
                   <i class="bx bx-map"></i>
-                  <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>My Address</h3>
+                  <p>Ahmedabad, Gujarat, India- 382330</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="fas fa-lg fa-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <h3>Email Me</h3>
+                  <p>abhipatel2103@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="fas fa-lg fa-phone"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>+91-9033111015</p>
                 </div>
               </div>
             </div>
@@ -41,28 +41,30 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row" style="margin:0;">
                 <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name">
                 </div>
                 <div class="col form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email">
                 </div>
               </div>
 			   <div class="col">
 				<div class="form-group">
-					<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="">
+					<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
 				</div>
 				</div>
 			  <div class="col">
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required=""></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
               </div>
 			  </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
+                
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                
               </div>
-              <input type="submit" class="btn btn-warning" value="Send Message">
+              <button class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/home">Send Message</a></button>
+			  
+
             </form>
           </div>
 
@@ -143,6 +145,7 @@
 			display:inline-block;
 			padding: 10px 30px;
 			color: #000;
+			margin-left: 17px;
 		}
 		.btn:hover,
 		button:hover,
