--- a/views/Partials/services.ejs
+++ b/views/Partials/services.ejs
@@ -25,7 +25,7 @@
 				<img src="Assets/images/analysis.png" style="height:100px" alt="Database_img"/>
 			</div>
 		</div>
-			<button type="button" class="btn btn-warning"><a href="/assets/images/resume.pdf" view>Get in Touch</button>
+			<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/contact">Get in Touch</a></button>
 			<p></p>
 			
 			</div>
