--- a/views/Partials/bottom_nav.ejs
+++ b/views/Partials/bottom_nav.ejs
@@ -5,10 +5,10 @@
 				
 				<div class="social-icons">
 					<ul style=" margin:0; padding:0;">
-						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+						<li><a href="https://www.facebook.com/patelabhi898/"><i class="fab fa-facebook-f"></i></a></li>
+						<li><a href="https://www.instagram.com/abhipatel2103/"><i class="fab fa-instagram"></i></a></li>
+						<li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/abhipatel57/"><i class="fab fa-linkedin"></i></a></li>
 					</ul>
 				</div>
 				<h6 class="display-6 navbar-text">&copy; Copyright 2020. All rights reserved.</h6>
