--- a/views/Partials/main_nav.ejs
+++ b/views/Partials/main_nav.ejs
@@ -8,36 +8,42 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       
-		<% if (title == "Home") { %>
-			<li class="nav-item active" >
+		<% if (key == "home") { %>
+			<li class="nav-item active">
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
 			<a class="nav-link" href="/home"> Home</a>
       </li>
-		<% if (title == "About") { %>
+		<% if (key == "about") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
         	<a class="nav-link" href="/about"> About </a>
       </li>
-		<% if (title == "Projects") { %>
+		<% if (key == "projects") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
         	<a class="nav-link" href="/Projects"> Projects</a>
       </li>
-	  	<% if (title == "Services") { %>
+	  	<% if (key == "services") { %>
 			<li class="nav-item active" >
 		<% } else { %>
 			<li class="nav-item">
 		<% } %>
         	<a class="nav-link" href="/services"> Services</a>
       </li>
-	  		<li class="nav-item">
-        <a class="nav-link" href="/contact"> Contacts</a>
+	  	<% if (key == "contact") { %>
+			<li class="nav-item active" >
+		<% } else { %>
+			<li class="nav-item">
+		<% } %>
+	  		<a class="nav-link" href="/contact"> Contacts</a>
       </li>
   </div>
+
+  
 </nav>
