--- a/views/Partials/projects.ejs
+++ b/views/Partials/projects.ejs
@@ -11,7 +11,21 @@
 		<div class="col-md-4">
 			<div class="card">
 				<div class="card-body">
-					<img src="Assets/images/telehealth3.png" class="card-img-top" alt="..."></img>
+				<img src="Assets/images/smart_helmet2.jpg" style="height:230px" class="card-img-top" alt="...">
+					<h5 class="card-title">Smart Helmet</h5>
+					<p class="card-text">
+						•	Bike having a smart helmet will not start its engine if rider does not wear a smart helmet.<br/>
+						•	Furthermore, engine will stop after 30 seconds if riders remove the smart helmet while riding the bike.<br/>
+						•	Also, Bike will not start if rider is drunk./
+
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card">
+				<div class="card-body">
+					<img src="Assets/images/telehealth3.png" class="card-img-top" alt="...">	
 					<h5 class="card-title">Telehealth</h5>
 					<p class="card-text">
 						• Telehealth is the use of digital information and communication technologies, 
@@ -24,27 +38,16 @@
 		<div class="col-md-4">
 			<div class="card">
 				<div class="card-body">
-				<img src="Assets/images/car_spa.jpg" class="card-img-top" alt="..."></img>
+				<img src="Assets/images/car_spa.jpg" class="card-img-top" alt="...">
 					<h5 class="card-title">Automatic Car-spa Plant</h5>
 					<p class="card-text">
-						•	A plant that is able to wash,rub and dry the car automatically.<br/>
+						•	A plant that is able to wash,rub and dry the car automatically.<br/><br/>
 						•	Additionally, plant is enabled with different settings of user interaction like selecting packages from gold, silver and platinum.
 					</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-4">
-			<div class="card">
-				<div class="card-body">
-				<img src="Assets/images/car_spa.jpg" class="card-img-top" alt="..."></img>
-					<h5 class="card-title">Automatic Car-spa Plant</h5>
-					<p class="card-text">
-						•	A plant that is able to wash,rub and dry the car automatically.<br/>
-						•	Additionally, plant is enabled with different settings of user interaction like selecting packages from gold, silver and platinum.
-					</p>
-				</div>
-			</div>
-		</div>
+		
 	</div>
 </main>
 
