--- a/views/Partials/about.ejs
+++ b/views/Partials/about.ejs
@@ -1,4 +1,4 @@
-
+<!-- this section include my photo, my information and button to open resume-->
 <main class="container">
 	<div class="jumbotron jumbotron-fluid wrapper">
 		
@@ -13,6 +13,7 @@
 				</div>
 				<div class="col-md-9">
 					<h2>Hi, I'm Abhi Patel</h2>
+					<hr style="border-top: 0.2px solid white;"/>
 					<div class="text">
 					<p>
 						I am from India and have a bachelor's degree in computer Engineering.<br/><br/>
@@ -37,10 +38,13 @@
 </main>
 
 	<style>
-	.profile-pic {
-		width:100%;
-		border-radius: 100%;
-	}
+	/*****CSS Code below***/
+	
+		/**CSS code for profile pci**/
+		.profile-pic {
+			width:100%;
+			border-radius: 100%;
+		}
 		.text{
 			text-align: left;
 			font-size: 13px;
@@ -96,6 +100,7 @@
 		.header-text{
 			font-variant: small-caps;
 			font-family: Georgia, serif;
+			margin-left: 80px;
 		}
 		.background{
 			background: #f5f5f5;
