--- a/views/Partials/bottom_nav.ejs
+++ b/views/Partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
-	<!-- Bottom Nav-->
+	<!-- Bottom Nav which include social media icon and its link. And, copyright portion-->
 	<footer>
 		<nav class="navbar fixed-bottom navbar-dark bg-dark"  style=" position: relative;">
 			<div class="container-fluid">
@@ -17,6 +17,7 @@
 	</footer>
 
 	<style>
+		/*CSS style for social media icons*/
 		.social-icons ul {
 			display:flex;
 			justify-content:center;
