--- a/views/Partials/home.ejs
+++ b/views/Partials/home.ejs
@@ -1,16 +1,20 @@
-
+<!--Home page include name, mission statement, buttons and photo-->
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
 			<h1 class="display-7 header-text"><%= title %></h1>
 		</div>
+		<hr style="margin:0; padding:0;"/>
+		
 		<div class="hero-section">
 			<div class="row">
 				<div class="col-md-7">
 					<h1 class="display-7">Hi, I'm Abhi</h1>
 					<h5>SQL developer</h5>
+					<p><hr/></p>
 					<h2><b>Mission :</b></h2>
 					<p>I work hard every day to provide respected service for customers who are in need to keep their data organized , efficient and secured.</p>
 					<p>To know more about my experience, what I provide or how we can get in touch for optimistic services, connect with me today. </p>
+					<hr/>
 					<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/about">Know more</a></button>
 					<button type="button" class="btn btn-warning"><a href="https://comp229-abhi.herokuapp.com/services">Services</a></button>
 				</div>
@@ -21,7 +25,9 @@
 		</div>
 </main>
 
+
 	<style>
+	/******CSS CODE below *******/
 		.wrapper {
 			position: relative;
 		}
@@ -29,6 +35,7 @@
 			padding: 20px;
 			background: #eee;
 		}
+		
 		/****** Button CSS START *******/
 		.btn,
 		button,
@@ -53,6 +60,8 @@
 			text-decoration: none;
 			}
 		/****** Button CSS END *******/
+		
+		
 		.header-wrapper {
 			position: absolute;
 			top: 0;
@@ -66,7 +75,14 @@
 			height: 100%;
 			width: 100%;
 		}
-	.jumbotron { margin: 0;}
+		
+		.header-text{
+			font-variant: small-caps;
+			font-family: Georgia, serif;
+			margin-left: 80px;
+		}
+
+		
 		.header-text {
 			z-index: 2;
 			position: relative;
@@ -74,6 +90,8 @@
 			margin-left: 15px;
 			
 		}
+		
+		/***** logo CSS *****/
 		.logo{
 			position: relative;
 			top: 0;
@@ -95,10 +113,7 @@
 			margin-right: 15px;
 		}
 		
-		.header-text{
-			font-variant: small-caps;
-			font-family: Georgia, serif;
-		}
+		
 		.background{
 			background: #f5f5f5;
 			
@@ -106,5 +121,7 @@
 		.jumbotron {
 			position: relative;
 			background: linear-gradient(to right, #EFEFBB, #D4D3DD);
+			margin: 0;
 		}
+		
 	</style>
