--- a/views/Partials/projects.ejs
+++ b/views/Partials/projects.ejs
@@ -1,3 +1,4 @@
+<!--this file include code for 3 cards that contains projects and its photo and information-->
 
 <main class="container">
 	<div class="jumbotron jumbotron-fluid wrapper">
@@ -52,6 +53,7 @@
 </main>
 
 	<style>
+	/******CSS CODE Below*****/
 		.wrapper {
 			position: relative;
 		}
