--- a/views/Partials/services.ejs
+++ b/views/Partials/services.ejs
@@ -1,12 +1,16 @@
-
+<!--This page has services that I provide with icons-->
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
 			
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
+			
+			
 		</div>
-		<div><h1 class="display-7"><%= name %></h1></div>
-		<div class = "service-section">
+		<hr style="height:2px;border-width:0;color:gray;background-color:gray"/>
+		
+		<div class = "service-section" style = "margin-top:-15px;">
+		
 		<div class="row" style = "align-items:center; margin-bottom:30px;">
 			<div class="col-md-3" style = "text-align:center">
 				<img src="Assets/images/database.jpg" style="height:100px" alt="Database_img"/>
@@ -16,6 +20,7 @@
 				<p>databse administration,effective data management and data security</p>
 			</div>
 		</div>
+		<hr style="margin:50px;"/>
 		<div class="row"style = "align-items:center">	
 			<div class="col-md-9"style = "text-align:right;">
 				<h2 >Data analysis</h2>
@@ -37,7 +42,8 @@
 </main>
 
 	<style>
-		}
+
+		/****CSS CODE below*****/
 		.wrapper {
 			position: relative;
 		}
@@ -60,7 +66,7 @@
 			z-index: 2;
 			position: relative;
 			color: #fff;
-			margin-left: 15px;
+			margin-left: 80px;
 			color: #034077;
 		}
 		.logo{
@@ -98,6 +104,7 @@
 		.jumbotron {
 			position: relative;
 			background: linear-gradient(to right, #EFEFBB, #D4D3DD);
+			margin-bottom: -16.5px;
 		}
 		/****** Button CSS START *******/
 		.btn,
@@ -122,9 +129,11 @@
 			color: #fff; 
 			text-decoration: none;
 			}
-		/****** Button CSS END *******/
+		
 		button.btn.btn-warning {
 			margin: 0 auto;
 			display: table;
 		}
+		/****** Button CSS END *******/
+	
 	</style>
