--- a/views/Partials/contact.ejs
+++ b/views/Partials/contact.ejs
@@ -1,12 +1,13 @@
-
+<!--This file include email address, contact num, contact form and button-->
 <main class="container">
 		<div class="jumbotron jumbotron-fluid wrapper">
 			<div class="header-wrapper">
 			<h1 class="display-7 header-text"><%= title %></h1>
 			
 		</div>
-		<div><h1 class="display-7"><%= name %></h1></div>
+		<hr style="height:1px;border-width:0;color:gray;background-color:gray"/>
 		
+		<!--Section for email, contact num and its icons start-->
 		<div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6">
@@ -36,7 +37,9 @@
             </div>
 
           </div>
-
+			<!--Section for email, contact num and its icons end-->
+			
+			<!--Section for contact form and button start-->
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row" style="margin:0;">
@@ -67,7 +70,7 @@
 
             </form>
           </div>
-
+		<!--Section for email, contact num and its icons end-->
         </div>
 </div>
 		
@@ -77,6 +80,7 @@
 
 
 	<style>
+	/******CSS CODE below******/
 		.wrapper {
 			position: relative;
 		}
@@ -100,6 +104,7 @@
 			position: relative;
 			color: #fff;
 			margin-left: 15px;
+			margin-top: 15px
 		}
 		.logo{
 			
@@ -128,6 +133,7 @@
 			font-variant: small-caps;
 			font-family: Georgia, serif;
 			color: #034077;
+			margin-left: 80px;
 		}
 		.background{
 			background: #f5f5f5;
